<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.6.RELEASE</version>
	</parent>
	<groupId>org.egov</groupId>
	<artifactId>bpa-services</artifactId>
	<version>1.1.6-SNAPSHOT</version>
	<name>bpa-services</name>

	<properties>
		<log4j2.version>2.17.1</log4j2.version>
		<java.version>1.8</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<lombok.version>1.18.8</lombok.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>6.0.16.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.10.2</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-core</artifactId>
			<version>1.5.18</version>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.javers</groupId>
			<artifactId>javers-core</artifactId>
			<version>3.1.0</version>
		</dependency>
		<dependency>
		  <groupId>org.egov.services</groupId>
		  <artifactId>tracer</artifactId>
		  <version>2.0.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.egov.services</groupId>
			<artifactId>services-common</artifactId>
			<version>1.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
    <groupId>org.projectlombok</groupId>
    <artifactId>lombok</artifactId>
    <version>1.18.20</version>
</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.2.jre7</version>
		</dependency>
		<dependency>
			<groupId>org.egov</groupId>
			<artifactId>mdms-client</artifactId>
			<version>0.0.2-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itext7-core</artifactId>
			<version>7.2.0</version>
			<type>pom</type>
		</dependency>

	</dependencies>
	<repositories>
		<repository>
			<id>repo.egovernments.org</id>
			<name>eGov ERP Releases Repository</name>
			<url>https://nexus-repo.egovernments.org/nexus/content/repositories/releases/</url>
		</repository>
		<repository>
			<id>repo.egovernments.org.snapshots</id>
			<name>eGov ERP Releases Repository</name>
			<url>https://nexus-repo.egovernments.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>repo.egovernments.org.public</id>
			<name>eGov Public Repository Group</name>
			<url>https://nexus-repo.egovernments.org/nexus/content/groups/public/</url>
		</repository>
	</repositories>
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
						<exclude>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-devtools</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
			  <groupId>cz.habarta.typescript-generator</groupId>
			  <artifactId>typescript-generator-maven-plugin</artifactId>
			  <version>2.22.595</version>
			  <executions>
			    <execution>
			      <id>generate</id>
			      <goals>
			        <goal>generate</goal>
			      </goals>
			      <phase>process-classes</phase>
			    </execution>
			  </executions>
			  <configuration>
			    <jsonLibrary>jackson2</jsonLibrary>
			    <classes>
			      <class>org.egov.bpa.web.model.BPAResponse</class>
			      <class>org.egov.bpa.web.model.BPARequest</class>
			      <class>org.egov.bpa.web.model.BPASearchCriteria</class>
			    </classes>
			    <customTypeMappings>
			      <customTypeMapping>org.egov.common.contract.request.User:User</customTypeMapping>
			      <customTypeMapping>org.egov.common.contract.request.RequestInfo:RequestInfo</customTypeMapping>
			      <customTypeMapping>org.egov.common.contract.response.ResponseInfo:ResponseInfo</customTypeMapping>			      
			      <customTypeMapping>org.egov.bpa.web.model.Document:Document</customTypeMapping>
			      <customTypeMapping>org.egov.bpa.web.model.AuditDetails:AuditDetails</customTypeMapping>
			    </customTypeMappings>
			    <namespace>Digit</namespace>
			    <debug>true</debug>
			    <outputKind>module</outputKind>
			  </configuration>
			</plugin>
		</plugins>
	</build>
</project>
